Display game status

--- a/static/index.html
+++ b/static/index.html
@@ -30,6 +30,7 @@
           <span style="color: violet">R</span>
           <span style="color: violet">D</span>
         </h1>
+        <p style="text-align: center">{{ greeting }}</p>
     </div>
 
     <script>
