--- a/static/index.html
+++ b/static/index.html
@@ -4,11 +4,10 @@
 <head>
     <title>Welcome to Vue</title>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <style>
     body {
-        font-family: 'Open Sans', sans-serif;
+        font-family: "medium", Helvetica, sans-serif;
         background-color: black;
     }
 
