--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,10 @@
         text-align: center;
         color: #00a9e0;
     }
+    p {
+      text-align: center;
+      color: white;
+    }
 </style>
 
 <body>
