--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@
         text-align: center;
         color: #00a9e0;
     }
+    
     p {
       text-align: center;
       color: white;
@@ -27,7 +28,7 @@
         <h1 v-on:keyup="sendKey">
           SWAGBOARD
         </h1>
-        <p style="text-align: center">{{ message }}</p>
+        <p>{{ message }}</p>
     </div>
 
     <script>
