--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
         text-align: center;
         color: #00a9e0;
     }
-    
+
     p {
       text-align: center;
       color: white;
@@ -56,7 +56,7 @@
         var app = new Vue({
             el: '#app',
             data: {
-                greeting: 'Want to play a game ?',
+                message: 'Want to play a game ?',
             },
             methods: {
                 getGreetings: function() {
