--- a/static/index.html
+++ b/static/index.html
@@ -64,17 +64,20 @@
                     get("http://localhost:5000", function(status) {
                         if (status == 1) {
                             app.message = "Congrats player 1 !!";
-                            app.color = red;
+                            app.color = 'red';
+                            app.inGame = false;
                         }
                         if (status == 2) {
                             app.message = "Congrats player 2 !!";
-                            app.color = green;
+                            app.color = 'green';
+                            app.inGame = false;
                         }
                         if (status == 0) {
                             app.message = "That's a tie";
                         }
                         if (status == -1) {
                             app.message = "Want to play a game ?";
+                            app.inGame = false;
                         }
                     })
                 },
@@ -86,15 +89,16 @@
                     })
                 },
                 startGame: function(e) {
-                    if (e.key == 't')
+                  app.inGame = true;
+                    if (e.key == "t")
                         post("http://localhost:5000/start", JSON.stringify({
                             g: 0
                         }), function(e) {
 
                         });
-                    if (e.key == 's')
+                    if (e.key == "s")
                         post("http://localhost:5000/start", JSON.stringify({
-                            g: 0
+                            g: 1
                         }), function(e) {
 
                         });
@@ -106,7 +110,7 @@
                 }, 1000 / 1);
                 addEventListener("keyup", function(e) {
                     app.sendKey(e)
-                    if (!inGame) app.startGame(e);
+                    if (!app.inGame) app.startGame(e);
                 });
             }
         })
